Fix gradient background, update colors for better readability

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,13 +24,13 @@
 	right: 0;
 	width: 100%;
 	z-index: 999;
-	background: rgba(135, 245, 245, 0.85);
+	background: rgba(255, 255, 255, 0.85);
 	#notice {
 		padding: 2.5rem 0;
 		text-align: center;
 		margin: 0;
 		font-size: 1.25rem;
-		font-weight: 700;
+		font-weight: 100;
 		letter-spacing: 1px;
 		color: $dark;
 	}
@@ -56,7 +56,10 @@ body {
   background:     -ms-linear-gradient(40deg, #4CB8C4 10%, #EAECC6 100%);
   background:      -o-linear-gradient(40deg, #4CB8C4 10%, #EAECC6 100%);
   background:         linear-gradient(40deg, #4CB8C4 10%, #EAECC6 100%);
-  font-family: 'Lato', sans-serif;
+	font-family: 'Lato', sans-serif;
+	margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .clearfix:before,
@@ -188,8 +191,10 @@ body {
 	text-align: center;
 	font-size: 0.8em;
 	color: white;
+	text-transform: uppercase;
 	a {
-		color: white;
+		color: $dark;
+		font-weight: 300;
 	}
 }
 
